# OpenForge

./: .coveragerc  .gitignore  CHANGELOG.md  MULTI-AGENT-WORKFLOW.md  OPEN-QUESTIONS.md  README.md  TODO.md  acp_runtime.py  agent_runtime.py  forge_avatar.py  forge_config.py  forge_context.py  forge_employees.py  forge_favorites.py  forge_files.py  forge_identity.py  forge_paths.py  forge_project.py  forge_refs.py  forge_session_search.py  forge_store.py  forge_uploads.py  forge_v07_telemetry.py  forge_workflows.py  forge_xiaof.py  forge_xiaof_openai.py  huddle_store.py  migrate_md_to_jsonl.py  post_router.py  pyproject.toml  restore_main_session.py  run_standup.py  server.py  sitecustomize.py
branding/: BRANDING-V1.md  BRANDING-V2.md
docs/: CI-CD.md  CONTRIBUTING.md  PRD-md-files.md  PRD-v0.7-thread-files-linking.md  PRD-v0.8-file-refs.md  PRD-v0.9-agent-context-bundle.md  PRD.md
migrations/: 001_seed_ss_ai_native_project_dir.py  m_19700101_no_op_placeholder.py  runner.py
scripts/: dev_seed.py  router_perf.py  validate_changelog.py
tests/: conftest.py  test_acp_employees.py  test_acp_runtime.py  test_agent_runtime.py  test_agent_status_api.py  test_avatar.py  test_close_permission.py  test_config_endpoint.py  test_context_bundle.py  test_cross_squad_mention.py  test_employees.py  test_favorites.py  test_file_roots.py  test_files.py  test_identity.py  test_migrations_runner.py  test_openforge_worktree_script.py  test_post_router.py  test_refs.py  test_router.py  test_server.py  test_server_extra.py  test_server_project_dir.py  test_server_squads_api.py  test_server_thread_pin.py  test_session_search.py  test_status_chip.py  test_store.py  test_store_extra.py  test_xiaof.py  (+6 more)
(+13 files in other folders)
